WIP: transactions by month

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       "
     ></div>
     <script src="./src/payees.js"></script>
+    <script src="./src//months.js"></script>
   </body>
 </html>
